api returns likes by person
